# python_data_analysis

./: gauss_distribution.ipynb  main.py  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  pyproject.toml  scikit-learn.ipynb  sckit-learn_classification.ipynb
