[project]
name = "python-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "html5lib>=1.1",
    "jupyterlab>=4.5.6",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]
